fix css, new welcome textlabel alignment

--- a/src/main/resources/css/style.css
+++ b/src/main/resources/css/style.css
@@ -1,5 +1,5 @@
-#loginBG{
+#loginPane{
     -fx-background-image: url("../images/loginBG.jpg");
     -fx-background-repeat: no-repeat;
-    -fx-background-size: cover;
+    -fx-background-size: cover, auto;
 }
